--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Merriweather&family=Montserrat:wght@200;400;600&display=swap');
 
 *{
     box-sizing: border-box;
@@ -8,6 +8,8 @@
 
 body{
     font-family: 'Montserrat', sans-serif;
+    /* background-color: #537888; */
+    /* color: #F7F7F7; */
 }
 
 li, a{
@@ -22,6 +24,8 @@ header{
     justify-content: flex-end;
     align-items: center;
     padding: 30px 10%;
+    background-color: #83bdd6;
+    margin-bottom: 80px;
 }
 
 .nav__links{
@@ -42,6 +46,33 @@ header{
 }
 
 .logo{
+    font-family: 'Merriweather', serif;
     margin-right: auto;
-    color: #537888;
+    color: #F90716;
+}
+
+.title{
+    display: flex;
+}
+
+.slide{
+    margin-left: 30em;
+}
+
+.section_title h1{
+    font-family: 'Great Vibes', cursive;
+    font-size: 4.5rem;
+    line-height: 1;
+    margin-left: 20px;
+    margin-top: 50px;
+    color: #396EB0;
+    font-weight: bold;
+
+}
+
+p{
+    margin-left:20px;
+    margin-top: 50px;
+    text-align: left;
+    font-size: 1.5rem;
 }
