--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ header {
   display: flex;
   background: #DADDFC;
   padding-top: 50px;
+  margin-bottom: 2px;
 }
 
 .slider {
@@ -139,8 +140,10 @@ header {
 }
 
 .about{
-  margin: 0 auto;
   padding-top: 50px;
+  background-color: #83bdd6;
+  margin-bottom: 2px;
+
 }
 
 .about-title{
@@ -157,6 +160,7 @@ header {
   margin-right: 300px;
   line-height: 2;
   font-size: 1rem;
+  padding-bottom: 50px;
 }
 
 .about h3{
@@ -165,4 +169,10 @@ header {
   padding: 10px 0;
   color: #396eb0;
   font-size: 1.5rem;
+}
+
+.author{
+  display: flex;
+  background: #DADDFC;
+  
 }
